# ml-finance

./: pyproject.toml
ml_finance/src/: Barkhatov_LSTM.ipynb  Barkhatov_Transformers.ipynb  Barkhatov_lesson1.ipynb  Barkhatov_lesson2.ipynb  Barkhatov_lesson3.ipynb  Barkhatov_lesson4.ipynb
ml_finance/src/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
ml_finance/src/catboost_info/learn/: events.out.tfevents
