[tool.poetry]
name = "ml-finance"
version = "0.1.0"
description = ""
authors = ["Daniil <kononov.miromanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
python-binance = "^1.0.24"
optuna = "^4.1.0"
pandas-ta = "^0.3.14b0"
requests = "^2.32.3"
ipykernel = "^6.29.5"
setuptools = "^75.6.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
